--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "cypress:open": "cypress open"
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@types/node": "20.4.9",
@@ -27,9 +26,15 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "babel-jest": "^29.6.2",
     "cypress": "^12.17.4",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2"
   }
 }
