--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-jest": "^29.6.2",
     "cypress": "^12.17.4",
     "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2"
+    "jest-environment-jsdom": "^29.6.2",
+    "next-router-mock": "^0.9.9"
   }
 }
