--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "styled-components": "^6.0.7",
     "typescript": "5.1.6"
@@ -31,6 +34,7 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
+    "@types/nodemailer": "^6.4.9",
     "@types/testing-library__jest-dom": "^6.0.0",
     "babel-jest": "^29.6.2",
     "cypress": "^12.17.4",
